# write-assist

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: guides
.claude/agents/: README.md  cite-assist-researcher-agent.md  drafter-agent.md  editor-agent.md  janitor-agent.md  judge-agent.md
.claude/commands/: janitor.md
.claude/skills/: README.md
.claude/skills/cite-assist/workflows/: evidence-gathering.md  exploratory-search.md  literature-review.md
docs/guides/: README.md  cite-assist-integration.md  llm-authentication.md
src/write_assist/: __init__.py
src/write_assist/agents/: __init__.py  base.py  drafter.py  editor.py  judge.py  models.py
src/write_assist/artifacts/: __init__.py  obfuscation.py  storage.py
src/write_assist/caching/: __init__.py  llm_cache.py
src/write_assist/citations/: __init__.py  client.py  models.py
src/write_assist/cli/: __init__.py  commands.py  output.py
src/write_assist/llm/: __init__.py  client.py  exceptions.py  models.py
src/write_assist/llm/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/write_assist/pipeline/: __init__.py  models.py  pipeline.py
src/write_assist/sources/: __init__.py  google_docs.py  loader.py  local.py  models.py
src/write_assist/tools/: __init__.py  base.py  search.py
tests/: __init__.py  test_agents.py  test_artifacts.py  test_citations.py  test_llm_integration.py  test_pipeline.py  test_placeholder.py  test_research.py  test_sources.py
